<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/myScroll" android:layout_width="fill_parent"
	android:scrollbars="vertical" android:layout_height="fill_parent"
	android:fillViewport="true" android:layout_gravity="center_horizontal">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:id="@+id/maincontainer"
		android:orientation="vertical" android:background="#dadfe2">
		<include layout="@layout/beintoobar" />
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="1dip" android:background="#FFFFFF" android:id="@+id/whiteline"></LinearLayout>
		<ViewSwitcher android:layout_width="fill_parent"
			android:id="@+id/viewFlipper" android:layout_height="wrap_content"
			android:foregroundGravity="center">
			<LinearLayout android:id="@+id/linearLayout1"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:orientation="vertical" android:layout_gravity="center_horizontal"
				android:gravity="center_horizontal">
				<TextView android:id="@+id/textView1" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:gravity="center"
					android:layout_gravity="center_horizontal"
					android:layout_marginTop="20dip" android:layout_marginBottom="10dip"
					android:textColor="#333133" android:lines="1" android:maxLines="1"
					android:imeOptions="actionDone" android:text="@string/boxemail"></TextView>
				<EditText android:layout_height="wrap_content" android:id="@+id/emailtext"
					android:layout_gravity="center_horizontal"
					android:layout_marginBottom="15dip" android:layout_width="294dip" android:singleLine="true"
					android:imeOptions="actionDone" android:hint="@string/youremail" android:maxLength="255"></EditText>
				<Button android:id="@+id/newuser" android:gravity="center"
					android:textColor="#FFFFFF" android:layout_height="50dip"
					android:layout_width="294dip" android:textSize="18dip"
					android:layout_gravity="center_horizontal"
					android:text="@string/startBeintooFun"></Button>
			</LinearLayout>
			<LinearLayout android:id="@+id/linearLayout2"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:orientation="vertical" android:layout_gravity="center_horizontal"
				android:gravity="center_horizontal">
				<TextView android:id="@+id/textView1" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:gravity="center"
					android:layout_gravity="center_horizontal"
					android:layout_marginTop="20dip" android:layout_marginBottom="10dip"
					android:textColor="#333133" android:lines="1" android:maxLines="1"
					android:imeOptions="actionDone" android:text="Confirm your nickname"></TextView>
				<EditText android:layout_height="wrap_content" android:id="@+id/nicktext"
					android:layout_gravity="center_horizontal"
					android:layout_marginBottom="15dip" android:hint="nickname"
					android:layout_width="294dip" android:singleLine="true"
					android:imeOptions="actionDone" android:maxLength="20"></EditText>
				<Button android:id="@+id/confirmNick" android:gravity="center"
					android:textColor="#FFFFFF" android:layout_height="50dip"
					android:layout_width="294dip" android:textSize="18dip"
					android:layout_gravity="center_horizontal" android:text="@string/confirmnick"></Button>
			</LinearLayout>
		</ViewSwitcher>

		<LinearLayout android:id="@+id/fbandlogin"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:orientation="vertical" android:layout_gravity="center_horizontal"
			android:gravity="center_horizontal" android:layout_marginTop="25dip">
			<Button android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/fblogin"
				android:background="@drawable/facebook" android:layout_gravity="center_horizontal"></Button>
			<TextView android:id="@+id/loginexisting"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal" android:textColor="#4B669B"
				android:textSize="16dip" android:text="@string/orloginExisting" android:layout_marginTop="20dip"></TextView>
			<TextView android:id="@+id/textView2" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/tos" android:textColor="#333133"
				android:layout_marginTop="30dip" android:textSize="12dip" android:gravity="center"></TextView>	
		</LinearLayout>
		<LinearLayout android:layout_width="fill_parent"
			android:orientation="vertical" android:layout_height="fill_parent"
			android:gravity="bottom|center" android:id="@+id/fond">
			<TextView android:id="@+id/textView3" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="www.beintoo.com" android:layout_marginBottom="10dip"></TextView>
			<ImageView android:id="@+id/layoutbottom"
				android:layout_width="fill_parent" android:background="@drawable/footer"
				android:layout_height="11dip" />

		</LinearLayout>
	</LinearLayout>
</ScrollView>	
