<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2011 Beintoo Licensed under the Apache License, Version 2.0 
	(the "License"); you may not use this file except in compliance with the 
	License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
	Unless required by applicable law or agreed to in writing, software distributed 
	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
	the specific language governing permissions and limitations under the License. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/myScroll" android:layout_width="fill_parent"
	android:scrollbars="vertical" android:layout_height="fill_parent"
	android:fillViewport="true">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:id="@+id/maincontainer"
		android:orientation="vertical" android:background="#dadfe2">
		<include layout="@layout/beintoobar" />
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="1dip" android:background="#FFFFFF" android:id="@+id/whiteline"></LinearLayout>
		<LinearLayout android:layout_width="fill_parent"
			android:id="@+id/textlayout" android:paddingLeft="15dip"
			android:gravity="center_vertical" android:layout_height="45dip">
			<TextView android:id="@+id/textView1" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:typeface="sans"
				android:textSize="16dip" android:textColor="#333133" android:text="@string/boxUserLogin"></TextView>
		</LinearLayout>
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="1dip" android:background="#8F9193" android:id="@+id/grayline"></LinearLayout>

		<LinearLayout android:layout_height="wrap_content"
			android:orientation="vertical" android:padding="20dip"
			android:layout_width="fill_parent" android:background="#dadfe2"
			android:paddingTop="0dip" android:layout_marginTop="0dip">
			<EditText android:id="@+id/mail" android:layout_width="fill_parent"
				android:hint="Email" android:layout_height="wrap_content"
				android:singleLine="true"
				android:maxLines="1" android:lines="1" android:nextFocusDown="@+id/password"
				android:imeOptions="actionNext"></EditText>

			<EditText android:id="@+id/password" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:password="true"
				android:singleLine="true"
				android:nextFocusDown="@+id/go" android:lines="1" android:maxLines="1"
				android:imeOptions="actionDone" android:hint="@string/password"></EditText>

			<RelativeLayout
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_gravity="right" android:orientation="horizontal"
				android:layout_marginTop="15dip">
				<Button android:padding="0dip" android:layout_margin="0dip"
					android:id="@+id/go" android:layout_centerInParent="true"
					android:text="@string/loginbt" android:textColor="#FFFFFF"
					android:layout_height="50dip" android:layout_width="294dip"
					android:textSize="18dip"></Button>
			</RelativeLayout>
		</LinearLayout>
		<LinearLayout android:layout_width="fill_parent"
			android:orientation="vertical" android:layout_height="fill_parent"
			android:gravity="bottom|center" android:id="@+id/fond">
			<ImageView android:id="@+id/layoutbottom"
				android:layout_width="fill_parent" android:background="@drawable/footer"
				android:layout_height="11dip" />

		</LinearLayout>
	</LinearLayout>
</ScrollView>